# top-wasm-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
xbase/: xaes.h  xlru_cache.h  xutl.h
xbasic/: CMakeLists.txt  xbyte_buffer.h  xcrypto_key.h  xcxx_config.h  xdbg.h  xelapsed_time.h  xenable_to_string.h  xid.hpp  xlru_cache.h  xmemory.hpp  xmodule_type.h  xmulti_arg_macro.h  xobject_ptr.h  xserializable_based_on.h  xutility.h  xversion.h  xversion.hpp
xbasic/src/: xbyte_buffer.cpp  xerror.cpp  xmodule_type.cpp  xstring.cpp
xbasic/xerror/: xerror.h
xcodec/: CMakeLists.txt  xmsgpack_codec.hpp
xcodec/src/: xcodec_category.cpp
xcodec/xdecorators/: xmsgpack_decorator.hpp
xcommon/: CMakeLists.txt  xaccount_address_fwd.h  xaccount_base_address_fwd.h  xaccount_id_fwd.h  xelection_result_keepalive_strategy.h  xip.h  xledger_id_fwd.h  xnode_type.h  xstrategy.hpp  xsymbol.h  xtable_id_fwd.h  xuser_option.h
xcommon/src/: xaddress.cpp  xip.cpp  xledger_id.cpp  xnode_id.cpp  xsharding_info.cpp
xcommon/xerror/: xerror.h
xconfig/: CMakeLists.txt  xchain_names.h  xconfig_face.h  xconfig_register.h  xpredefined_configurations.h
xconfig/src/: xchain_names.cpp  xconfig_register.cpp  xconfig_update_parameter_action.cpp  xutility.cpp
xdata/: CMakeLists.txt  xaction.h  xblock_statistics_data.h  xblockaction.h  xchain_param.h  xcons_transaction.h  xconsensus_action.h  xconsensus_action_stage.h  xdata_common.h  xdata_defines.h  xentire_block.hpp  xfull_tableblock.h  xfullunit.h  xlightunit_info.h  xproposal_data.h  xreceipt_data_store.h  xtable_bstate.h  xtop_action.h  xtop_action_type.h  xtransaction.h  xtransaction_v1.h  xtransaction_v2.h  xunit_bstate.h
xdata/src/: xcons_transaction.cpp  xreceipt_data_store.cpp  xstandby_network_storage_result.cpp  xstandby_node_info.cpp  xtransaction_v1.cpp  xtransaction_v2.cpp  xunit_bstate.cpp
xdata/xerror/: xerror.h
xstate_accessor/: CMakeLists.txt  xstate_accessor.h
xstate_accessor/src/: xerror.cpp  xstate_accessor.cpp  xtoken.cpp
xstate_accessor/xerror/: xerror.h
xstate_accessor/xproperties/: xproperty_category.h  xproperty_type.h
xstate_accessor_c/: CMakeLists.txt  xstate_accessor.h  xstate_accessor_handle.h
xstate_accessor_c/src/: xstate_accessor.cpp  xstate_accessor_handle.cpp
xstate_accessor_rs/: Cargo.toml
xstate_accessor_rs/src/: lib.rs  state_accessor.rs
xtop_wasm_rs/state_accessor/src/: lib.rs  state_accessor_handle.rs
xtop_wasm_rs/types/src/: lib.rs  token.rs
xvledger/: xaccountindex.h  xdataobj_base.hpp  xreceiptid.h  xvblock.h  xvblock_fork.h  xvblockbuild.h  xveventbus.h  xvledger.h  xvtransact.h  xvtxindex.h
xwasm_rs/: CMakeLists.txt  Cargo.toml
xwasm_rs/ffi/: Cargo.toml
xwasm_rs/ffi/src/: lib.rs
xwasm_rs/ffi/src/state_accessor/: api.rs  mod.rs  types.rs
xwasm_rs/ffi/src/state_accessor/properties/: enums.rs
xwasm_rs/state_accessor/: Cargo.toml
xwasm_rs/state_accessor/src/: lib.rs  state_accessor.rs  state_accessor_api.rs  traits.rs
xwasm_rs/types/: Cargo.toml
xwasm_rs/types/src/: lib.rs  symbol.rs  token.rs
xwasm_rs/types/src/fundamental/: bytes.rs  error.rs  error_code.rs  mod.rs  symbol.rs  token.rs
